--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,19 @@ input:-webkit-autofill:focus {
   -moz-box-shadow: 0px 20px 25px -15px rgba(34, 41, 49, 0.8);
   box-shadow: 0px 20px 25px -15px rgb(34 41 49 / 80%);
 }
+.error {
+  background-color: red;
+  width: 250px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto auto;
+}
+.capcha canvas {
+  margin-left: -20px;
+  /* border: 1px solid red; */
+}
 .content {
   display: flex;
   justify-content: center;
