--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   padding: 0;
   box-sizing: border-box;
   caret-color: white;
+  font-family: "Calibri Light";
+}
+a {
+  text-decoration: none;
 }
 input:-webkit-autofill {
   background-color: transparent !important;
@@ -223,20 +227,39 @@ li {
   align-items: flex-start;
   flex-direction: column;
   position: relative;
-  top: 54px;
+  top: 170px;
   width: 150px;
 }
 .menu-links {
   border: 1px solid white;
-  background-color: #373e48;
+  background-color: #222931;
   border-radius: 5px;
   /* text-decoration: underline; */
   cursor: pointer;
+  width: 250px;
+  z-index: 2;
 
   display: block;
 }
+.underline {
+  height: 0.2px;
+  /* width: 100%; */
+  background-color: white;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 .menu-links li {
-  border-bottom: 1px solid white;
+  /* padding-bottom: 20px; */
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Calibri";
+  margin-left: 15px;
+  margin-right: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.menu-links li:hover {
+  background-color: #2a313a;
 }
 .off {
   display: none;
@@ -269,6 +292,11 @@ li {
   line-height: 35px;
   cursor: pointer;
   margin-right: 35px;
+}
+.menu:hover {
+  background-image: none;
+  background-color: white;
+  color: black;
 }
 .inactive {
   top: 0px;
@@ -382,10 +410,103 @@ input {
   color: white;
 }
 .dropdown {
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
   /* width: 200px; */
   position: relative;
   /* top: 50px; */
+}
+.balance-head {
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: center;
+  margin-bottom: 80px;
+  margin-top: 40px;
+  /* justify-content: space-between; */
+}
+.bh-head {
+  font-size: 27px;
+  color: white;
+  font-weight: bolder;
+  margin-left: 10px;
+}
+.min-deposit {
+  /* height: 50px; */
+  width: fit-content;
+  color: white;
+  border: 1px solid red;
+  padding: 40px;
+  font-size: 20px;
+  font-weight: bold;
+  /* margin-bottom: 50px; */
+}
+.usd-amt {
+  display: flex;
+  flex-direction: column;
+  padding: 14px 16px;
+  background: #2a313a;
+  border-radius: 5px;
+  border: 1px solid #323842;
+  color: #7e8795;
+  font: 16px CalibriBold;
+  width: 45%;
+}
+.converter {
+  display: flex;
+  flex-direction: column;
+  padding: 14px 16px;
+  border-radius: 5px;
+  border: 1px solid #323842;
+  color: #7e8795;
+  font: 16px CalibriBold;
+  text-align: center;
+  width: 45%;
+}
+.parent-div {
+  margin-top: 40px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.btc-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 700px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.btc-txt {
+  margin-bottom: 5px;
+}
+.btc-content {
+  padding: 20px 25px;
+  border-radius: 6px;
+  background: #222931;
+}
+.attention {
+  padding: 53px 55px;
+  border-radius: 5px;
+  background: #222931;
+  color: #fff;
+  font: 16px/1.5em Calibri;
+  width: 700px;
+}
+.item_info__balance {
+  color: #7e8795;
+  font: 20px Calibri;
+  line-height: 40px;
+  border-radius: 4px;
+  padding: 0 15px;
+  margin-bottom: 5px;
+  background: #1d232a;
+}
+.btc-wallet {
+  color: #fdbf00;
+  margin-left: 30px;
+  font-weight: bold;
+}
+input [type="number"] {
+  background-color: #1d232a;
+  border: 1px solid red;
 }
