--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,7 @@ li {
   background: #222931;
   width: 390px;
   left: 15px;
-  top: -50px;
+  top: 0px;
   height: calc(100vh - 115px);
 }
 .content_sitebar {
@@ -421,7 +421,7 @@ input {
   display: flex;
   align-items: center;
   margin-bottom: 80px;
-  margin-top: 40px;
+  padding-top: 40px;
   /* justify-content: space-between; */
 }
 .bh-head {
